--- a/index.html
+++ b/index.html
@@ -95,14 +95,18 @@
         text-align: left;
         width: 600px;
       }
+      .heading-section {
+        padding: 38px;
+      }
       @media (max-width: 768px) {
         .heading {
           font-size: 40px;
           width: 440px;
         }
-        .heading-container {
-          padding: 0px;
+        .heading-section {
+          padding: 18px;
         }
+
         .p-content {
           width: 453px;
         }
@@ -168,8 +172,8 @@
       <main class="container-fluid">
         <!--  -->
         <div class="container-md py-2">
-          <div class="container-md bg-dark p-5 text-white">
-            <div class="heading-container">
+          <div class="container-md bg-dark text-white">
+            <div class="heading-section">
               <h1 class="heading">Title of a longer featured blog post</h1>
               <p class="text-white-50 p-content py-2 size-20">
                 Multiple lines of text that form the lede, informing new readers
