--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
             <a href="" class="text-secondary">Subscribe</a>
           </div>
           <div class="">
-            <h2><a href="" class="text-dark">Large</a></h2>
+            <p class="fs-3"><a href="" class="text-dark">Large</a></p>
           </div>
           <div class="">
             <i class="fa-solid fa-magnifying-glass text-secondary px-2"></i>
@@ -140,7 +140,7 @@
           </div>
         </div>
         <div class="container-md">
-          <ul class="nav justify-content-between py-2 border-top">
+          <ul class="nav justify-content-between d-flex py-2 border-top">
             <li class="nav-item">
               <a href="" class="text-secondary">Would</a>
             </li>
