--- a/index.html
+++ b/index.html
@@ -296,19 +296,20 @@
                   </li>
                 </ul>
                 <p>And this is an ordered list:</p>
-                <div class="">
-                  <div class="">
-                    <p class="fw-bold">
+                <div class=" ">
+                  <div class="py-1">
+                    <p class="fw-bold mb-0">
                       HyperText Markup Language (HTML) The language used to
                     </p>
+
                     describe and define the content of a Web page
                   </div>
-                  <div class="">
-                    <p class="fw-bold">Cascading Style Sheets (CSS)</p>
+                  <div class="py-1">
+                    <p class="fw-bold mb-0">Cascading Style Sheets (CSS)</p>
                     Used to describe the appearance of Web content
                   </div>
-                  <div class="">
-                    <p class="fw-bold">JavaScript (JS)</p>
+                  <div class="py-1">
+                    <p class="fw-bold mb-0">JavaScript (JS)</p>
                     The programming language used to build advanced Web sites
                     and applications
                   </div>
