--- a/index.html
+++ b/index.html
@@ -199,8 +199,8 @@
               <div class="container-md col-md border rounded-1">
                 <div class="row">
                   <div class="col-md-8 p-3">
-                    <p class="text-primary">World</p>
-                    <h3 class="size-28">Featured post</h3>
+                    <p class="text-primary mb-0">World</p>
+                    <h3 class="size-28 mt-3">Featured post</h3>
                     <p class="text-black-50">Nov 12</p>
                     <p>
                       This is a wider card with supporting text below as a
@@ -218,8 +218,8 @@
               <div class="container-md col-md border rounded-1">
                 <div class="row">
                   <div class="col-md-8 p-3">
-                    <p class="text-success">World</p>
-                    <h3 class="size-28">Featured post</h3>
+                    <p class="text-success mb-0">Design</p>
+                    <h3 class="size-28 mt-3">Featured post</h3>
                     <p class="text-black-50">Nov 12</p>
                     <p>
                       This is a wider card with supporting text below as a
