--- a/index.html
+++ b/index.html
@@ -104,17 +104,14 @@
       @media (max-width: 768px) {
         .heading {
           font-size: 40px;
-          width: 440px;
+          width: 340px;
         }
         .heading-section {
           padding: 18px;
         }
 
         .p-content {
-          width: 453px;
-        }
-        .fake-img {
-          display: none;
+          width: 253px;
         }
       }
     </style>
@@ -194,43 +191,50 @@
         </div>
         <!--  -->
         <div class="container-md py-4">
-          <div class="container-md">
-            <div class="row d-flex gap-3">
-              <div class="container-md col-md border rounded-1">
-                <div class="row">
-                  <div class="col-md-8 p-3">
-                    <p class="text-primary mb-0">World</p>
-                    <h3 class="size-28 mt-1">Featured post</h3>
-                    <p class="text-black-50">Nov 12</p>
-                    <p>
-                      This is a wider card with supporting text below as a
-                      natural lead-in to additional content.
-                    </p>
-                    <p><a href="">Continue reading</a></p>
-                  </div>
-                  <div
-                    class="col-md-4 bg-secondary fake-img rounded-end-1 d-flex justify-content-center align-items-center d-none d-md-flex"
-                  >
-                    <p class="p-section">Thumbnail</p>
+          <div class="container-fluid">
+            <div class="container-md">
+              <div class="row gap-3">
+                <div class="card col-md">
+                  <div class="row">
+                    <div class="col-md-8">
+                      <div class="card-body">
+                        <p class="text-primary my-0">World</p>
+                        <h3 class="my-1">Featured post</h3>
+                        <p class="text-black-50">Nov 12</p>
+                        <p>
+                          This is a wider card with supporting text below as a
+                          natural lead-in to additional content.
+                        </p>
+                        <p class=""><a href="">Continue reading</a></p>
+                      </div>
+                    </div>
+                    <div
+                      class="col-md-4 rounded-end bg-secondary d-none justify-content-center d-flex align-items-center text-white d-md-flex"
+                    >
+                      <p>Thumbnail</p>
+                    </div>
                   </div>
                 </div>
-              </div>
-              <div class="container-md col-md border rounded-1">
-                <div class="row">
-                  <div class="col-md-8 p-3">
-                    <p class="text-success mb-0">Design</p>
-                    <h3 class="size-28 mt-1">Featured post</h3>
-                    <p class="text-black-50">Nov 12</p>
-                    <p>
-                      This is a wider card with supporting text below as a
-                      natural lead-in to additional content.
-                    </p>
-                    <p><a href="">Continue reading</a></p>
-                  </div>
-                  <div
-                    class="col-md-4 bg-secondary fake-img rounded-end-1 d-flex justify-content-center align-items-center d-none d-md-flex"
-                  >
-                    <p class="p-section">Thumbnail</p>
+
+                <div class="card col-md">
+                  <div class="row">
+                    <div class="col-md-8">
+                      <div class="card-body">
+                        <p class="text-primary my-0">World</p>
+                        <h3 class="my-1">Featured post</h3>
+                        <p class="text-black-50">Nov 12</p>
+                        <p>
+                          This is a wider card with supporting text below as a
+                          natural lead-in to additional content.
+                        </p>
+                        <p class=""><a href="">Continue reading</a></p>
+                      </div>
+                    </div>
+                    <div
+                      class="col-md-4 rounded-end bg-secondary d-none justify-content-center d-flex align-items-center text-white d-md-flex"
+                    >
+                      <p>Thumbnail</p>
+                    </div>
                   </div>
                 </div>
               </div>
