--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
       .size-32 {
         font-size: 32px;
       }
+
       .p-content {
         font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
         font-size: 20px;
@@ -103,11 +104,16 @@
       }
       @media (max-width: 768px) {
         .heading {
-          font-size: 40px;
-          width: 340px;
+          width: 380.73px;
+          height: 96px;
+          top: -0.5px;
+          gap: 0px;
+          margin: 15px 0px;
+          opacity: 0px;
+          font-size: 34px;
         }
         .heading-section {
-          padding: 18px;
+          padding: 8px;
         }
 
         .p-content {
@@ -177,7 +183,10 @@
         <div class="container-md py-2">
           <div class="container-md bg-dark text-white">
             <div class="heading-section">
-              <h1 class="heading">Title of a longer featured blog post</h1>
+              <h1 class="heading">
+                Title of a longer featured <br />
+                blog post
+              </h1>
               <p class="text-white-50 p-content py-2 size-20">
                 Multiple lines of text that form the lede, informing new readers
                 quickly and efficiently about what's most interesting in this
